# yt-sublearn

./: .gitignore  .orphaned_at  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
plugin/.claude-plugin/: plugin.json
plugin/skills/yt-translate/: SKILL.md
plugins/yt-sublearn/.claude-plugin/: plugin.json
plugins/yt-sublearn/agents/: yt-subtitle-translator.md
plugins/yt-sublearn/skills/yt-sublearn/: SKILL.md
plugins/yt-sublearn/skills/yt-sublearn/scripts/: download.py  merge.py
skills/yt-translate/: SKILL.md
skills/yt-translate/scripts/: download.py
src/yt_translate/: download.py
