[project]
name = "yt-translate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["yt-dlp>=2024.0.0"]

[project.scripts]
yt-download = "yt_translate.download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_translate"]
